--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Dinos 'R' Us</title>
+	<title>{{page.title}} · Dinos 'R' Us </title>
+	<meta name="description" content="{{page.meta}}">
 	<meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -28,13 +29,13 @@
     <nav class="unit unit-s-1 unit-m-1 unit-l-2-3">
       <ul class="list-group giga brand-family push-0 nav">
         <li class="list-group-item list-group-item-inline">
-          <a class="{% if page.url == '/' %}current{% endif%}" href="{{site.baseurl}}/">Home</a>
+          <a class="{% if page.url == '/' %}current{% endif %}" href="{{site.baseurl}}/">Home</a>
         </li>
         <li class="list-group-item list-group-item-inline">
-          <a class="{% if page.url contains 'dinos' %}current{% endif%}" href="{{site.baseurl}}/dinos/">Dinosaurs</a>
+          <a class="{% if page.url contains 'dinos' %}current{% endif %}" href="{{site.baseurl}}/dinos/">Dinosaurs</a>
         </li>
         <li class="list-group-item list-group-item-inline">
-          <a class="{% if page.url == '/about/' %}current{% endif%}" href="{{site.baseurl}}/about/">About</a>
+          <a class="{% if page.url == '/about/' %}current{% endif %}" href="{{site.baseurl}}/about/">About</a>
         </li>
       </ul>
     </nav>
