--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,10 @@
 	<link href="{{site.baseurl}}/css/footer.css" rel="stylesheet">
 	<link href="{{site.baseurl}}/css/product-list-item.css" rel="stylesheet">
 	<link href="{{site.baseurl}}/css/product.css" rel="stylesheet">
+	<link href="{{site.baseurl}}/css/promos-small.css" rel="stylesheet">
 </head>
+
+<body>
 
 <header class="masthead island push-0">
   <div class="grid grid-bottom">
@@ -42,11 +45,14 @@
   </div>
 </header>
 
-<body>
+{% if page.showbanner %}
+	<div class="banner">
+		<h1 class="yotta">{{page.bannertext}}</h1>
+	</div>
+{% endif %}
 
 {{content}}
 
-</body>
 
 <footer class="footer pad-t">
   <div class="grid">
@@ -71,5 +77,7 @@
     </div>
   </div>
 </footer>
+
+</body>
 
 </html>
