--- a/css/header.css
+++ b/css/header.css
@@ -37,3 +37,14 @@
   }
 
 }
+
+.banner {
+	background: #6e9d1b url("../images/banner.jpg") no-repeat center center;
+	padding: 5rem 1rem 1rem;
+	text-align: center;
+	color: #fff;
+}
+
+.banner h1 {
+	color: #fff;
+}
